feat: add swagger comments for places
