# controllers/places-controller.js
@@ -7,12 +7,19 @@ const User = require("../models/users");
 
 
 const getAllPlaces = async (req, res, next) => {
+    // #swagger.tags = ['Place']
+    // #swagger.summary = 'List all places'
+    // #swagger.operationId = 'getAllPlaces'
+    // #swagger.responses[200] = { description: 'OK' }
+    // #swagger.responses[204] = { description: 'Empty data :(' }
+    // #swagger.responses[500] = { description: 'Could not fetch data, please try again.' }
+
     let places;
     try {
         places = await Place.find({});
     } catch (err) {
         const error = new HttpError(
-            "Could not fetch data, please try again.",
+            "Something went wrong, please try again.",
             500
         );
         return next(error);
@@ -26,13 +33,25 @@ const getAllPlaces = async (req, res, next) => {
 };
 
 const getPlaceById = async (req, res, next) => {
+    // #swagger.tags = ['Place']
+    // #swagger.summary = 'Get place by Id'
+    // #swagger.operationId = 'getUserById'
+    /* #swagger.parameters['uid'] = {
+            description: "user id",
+            required: true,
+            type: "string",
+    } */
+    // #swagger.responses[200] = { description: 'OK' }
+    // #swagger.responses[404] = { description: 'Could not find the user for the provided id.' }
+    // #swagger.responses[500] = { description: 'Something went wrong, please try again.' }
+
     const placeId = req.params.pid;
     let place;
     try {
         place = await Place.findById(placeId);
     } catch (err) {
         const error = new HttpError(
-            "Something went wrong, could not find a place.",
+            "Something went wrong, please try again.",
             500
         );
         return next(error);
@@ -49,6 +68,18 @@ const getPlaceById = async (req, res, next) => {
 };
 
 const getPlacesByUserId = async (req, res, next) => {
+    // #swagger.tags = ['Place']
+    // #swagger.summary = 'Retrieve places by user Id'
+    // #swagger.operationId = 'getPlacesByUserId'
+    /* #swagger.parameters['uid'] = {
+            description: 'user id',
+            required: true,
+            type: 'string',
+    } */
+    // #swagger.responses[200] = { description: 'OK' }
+    // #swagger.responses[404] = { description: 'Could not find a place for the provided user id.' }
+    // #swagger.responses[500] = { description: 'Something went wrong, please try again.' }
+
     const userId = req.params.uid;
     let places;
     // let userWithPlaces;
@@ -57,7 +88,7 @@ const getPlacesByUserId = async (req, res, next) => {
         // userWithPlaces = await User.findById(userId).populate("places");
     } catch (err) {
         const error = new HttpError(
-            "Fetching places failed, please try again.",
+            "Something went wrong, please try again.",
             500
         );
         return next(error);
@@ -78,6 +109,25 @@ const getPlacesByUserId = async (req, res, next) => {
 };
 
 const createPlace = async (req, res, next) => {
+    // #swagger.tags = ['Place']
+    // #swagger.summary = 'Create place'
+    // #swagger.operationId = 'getPlaceByUserId'
+    /* #swagger.requestBody = {
+              required: true,
+              content: {
+                  "application/json": {
+                      schema: { $ref: "#/components/schemas/Place" }
+                  }
+              }
+          }
+        */
+    /* #swagger.responses[201] = {
+            description: 'Created place',
+            schema: { $ref: "#/components/schemas/Place" }
+    } */
+    // #swagger.responses[404] = { description: 'Could not find a user for provided id.' }
+    // #swagger.responses[500] = { description: 'Something went wrong, please try again.' }
+
     const errors = validationResult(req);
 
     if (!errors.isEmpty()) {
@@ -108,7 +158,7 @@ const createPlace = async (req, res, next) => {
         user = await User.findById(creator);
     } catch (err) {
         const error = new HttpError(
-            "Creating place failed, please try again",
+            "Something went wrong, please try again.",
             500
         );
         return next(error);
@@ -134,7 +184,7 @@ const createPlace = async (req, res, next) => {
         await sess.commitTransaction();
     } catch (err) {
         const error = new HttpError(
-            "Creating place failed, please try again.",
+            "Something went wrong, please try again.",
             500
         );
         return next(error);
@@ -144,6 +194,19 @@ const createPlace = async (req, res, next) => {
 };
 
 const updatePlaceById = async (req, res, next) => {
+    // #swagger.tags = ['Place']
+    // #swagger.summary = 'Update place by Id'
+    // #swagger.operationId = 'updatePlaceById'
+    /* #swagger.responses[200] = {
+                description: 'Update title and description of a place',
+                schema: {
+                    title: 'Empire State Building',
+                    description: 'ny',
+                }
+    } */
+    // #swagger.responses[404] = { description: 'Could not find a place for provided id.' }
+    // #swagger.responses[500] = { description: 'Something went wrong, please try again.' }
+
     const errors = validationResult(req);
     if (!errors.isEmpty()) {
         return next(new HttpError(errors.array()[0].msg, 442));
@@ -162,6 +225,11 @@ const updatePlaceById = async (req, res, next) => {
         return next(error);
     }
 
+    if (!updatedPlace) {
+        const error = new HttpError("Could not find a place with provided id.", 404);
+        return next(error);
+    }
+
     updatedPlace.title = title;
     updatedPlace.description = description;
 
@@ -169,7 +237,7 @@ const updatePlaceById = async (req, res, next) => {
         await updatedPlace.save();
     } catch (err) {
         const error = new HttpError(
-            "Failed to update place, please try again",
+            "Something went wrong, could not update place.",
             500
         );
         return next(error);
@@ -179,6 +247,12 @@ const updatePlaceById = async (req, res, next) => {
 };
 
 const deletePlace = async (req, res, next) => {
+    // #swagger.tags = ['Place']
+    // #swagger.summary = 'Delete place by Id'
+    // #swagger.operationId = 'deletePlace'
+    // #swagger.responses[200] = { description: 'Successfully deleted.' }
+    // #swagger.responses[500] = { description: 'Something went wrong, please try again.' }
+
     const placeId = req.params.pid;
     let place;
     try {
